--- a/fifa.html
+++ b/fifa.html
@@ -49,7 +49,7 @@ d3.csv("https://raw.githubusercontent.com/eshantarneja/d3fifa/master/fifa.csv", 
     .enter()
     .append("circle")
       .attr("cx", function (d) { return x(d.Overall); } )
-      .attr("cy", function (d) { return y(d.Value); } )
+      .attr("cy", function (d) { return y(+ d.Value); } )
       .attr("r", 1.5)
       .style("fill", "#69b3a2")
 
