--- a/fifa.html
+++ b/fifa.html
@@ -10,7 +10,10 @@
 
 <script>
 
-// set the dimensions and margins of the graph
+//Read the data
+d3.csv("https://raw.githubusercontent.com/eshantarneja/d3fifa/master/fifa.csv", function(data) {
+
+  // set the dimensions and margins of the graph
 var margin = {top: 10, right: 30, bottom: 30, left: 70},
     width = 460 - margin.left - margin.right,
     height = 400 - margin.top - margin.bottom;
@@ -23,9 +26,6 @@ var svg = d3.select("#my_dataviz")
   .append("g")
     .attr("transform",
           "translate(" + margin.left + "," + margin.top + ")");
-
-//Read the data
-d3.csv("https://raw.githubusercontent.com/eshantarneja/d3fifa/master/fifa.csv", function(data) {
 
   // Add X axis
   var x = d3.scaleLinear()
@@ -42,7 +42,33 @@ d3.csv("https://raw.githubusercontent.com/eshantarneja/d3fifa/master/fifa.csv", 
   svg.append("g")
     .call(d3.axisLeft(y));
 
-  // Add dots
+  var tooltip = d3.select("#my_dataviz")
+    .append("div")
+    .style("opacity",0)
+    .attr("class","tooltip")
+    .style("background-color","white")
+    .style("border","solid")
+    .style("border-width","1px")
+    .style("border-radius", "5px")
+    .style("padding","10px")
+
+  var mouseover = function(d) {
+    tooltip.
+    style("opacity", 1)
+  }
+
+  var mouseleave = function(d) {
+    tooltip.
+    style("opacity", 0)
+  }
+
+  var mousemove = function(d) {
+    tooltip
+    .html("Name: " + d.Name)
+    .style("left", (d3.mouse(this)[0]+90) + "px") 
+    .style("top", (d3.mouse(this)[1]) + "px")
+  }
+    // Add dots
   svg.append('g')
     .selectAll("dot")
     .data(data)
@@ -52,6 +78,10 @@ d3.csv("https://raw.githubusercontent.com/eshantarneja/d3fifa/master/fifa.csv", 
       .attr("cy", function (d) { return y(+ d.Value); } )
       .attr("r", 1.5)
       .style("fill", "#69b3a2")
+      .on("mouseover", mouseover)
+      .on("mouseleave", mouseleave)
+      .on("mousemove", mousemove)
+
 
 })
 
