--- a/fifa.html
+++ b/fifa.html
@@ -7,6 +7,15 @@
 <!-- Create a div where the graph will take place -->
 <div id="my_dataviz"></div>
 
+<!-- style of selected circles -->
+<style>
+.selected {
+  opacity: 1 !important;
+  stroke: black;
+  stroke-width: 1px;
+}
+</style>
+
 
 <script>
 
@@ -69,7 +78,7 @@ var svg = d3.select("#my_dataviz")
     .style("top", (d3.mouse(this)[1]) + "px")
   }
     // Add dots
-  svg.append('g')
+  var myCircle = svg.append('g')
     .selectAll("dot")
     .data(data)
     .enter()
@@ -81,6 +90,28 @@ var svg = d3.select("#my_dataviz")
       .on("mouseover", mouseover)
       .on("mouseleave", mouseleave)
       .on("mousemove", mousemove)
+
+   // Add brushing
+  svg
+    .call( d3.brush()                 // Add the brush feature using the d3.brush function
+      .extent( [ [0,0], [width,height] ] ) // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
+      .on("start brush", updateChart) // Each time the brush selection changes, trigger the 'updateChart' function
+    )
+
+  // Function that is triggered when brushing is performed
+  function updateChart() {
+    extent = d3.event.selection
+    myCircle.classed("selected", function(d){ return isBrushed(extent, x(d.Overall), y(+ d.Value) ) } )
+  }
+
+  // A function that return TRUE or FALSE according if a dot is in the selection or not
+  function isBrushed(brush_coords, cx, cy) {
+       var x0 = brush_coords[0][0],
+           x1 = brush_coords[1][0],
+           y0 = brush_coords[0][1],
+           y1 = brush_coords[1][1];
+      return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1;    // This return TRUE or FALSE depending on if the points is in the selected area
+  }
 
 
 })
