--- a/newFifa.html
+++ b/newFifa.html
@@ -123,7 +123,7 @@
         <table>
             <tr>
                 <th>Player Name</th>
-                <th>Overall Rating</th> 
+                <th>Overall</th> 
                 <th>Salary</th> 
                 <th>Position</th>
                 <th>X Attribute</th>
