--- a/newFifa.html
+++ b/newFifa.html
@@ -18,7 +18,6 @@
             border: 1px solid black;
             border-collapse: collapse;
             border-spacing: 5px;
-            padding: 25px;
       }
       tr:nth-child(even) {
             background-color: #d9d9d9;
@@ -33,8 +32,7 @@
         position: absolute;
         left: 340px;
         top: 420px;
-        font-size: 15px;
-        display: block;
+        font-size: 16px;
         font-family: Arial;
       }
       .Yaxis{
@@ -42,7 +40,7 @@
         top: 100px;
         left: 5px;
         font-size: 15px;
-        font-family: sans-serif;
+        font-family: Arial;
       }
       .scatter {
         position: relative;
@@ -368,34 +366,6 @@
                 "#1f78b4", "#1f78b4", "#1f78b4", "#1f78b4", "#1f78b4", "#1f78b4", "#1f78b4", "#1f78b4",   // colors for midfielder positions
                 "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", "#b2df8a", // colors for defense
                 "#fb9a99"])     // color for goalkeepers
-
-    // // Draw legend
-    // var legend = svg.selectAll(".legend")
-    // .data(colors)
-    // .enter().append("g")
-    // .attr("class", "legend")
-    // .attr("transform", function(d, i) { return "translate(30," + i * 19 + ")"; });
-
-    // legend.append("rect")
-    // .attr("x", width - 18)
-    // .attr("width", 18)
-    // .attr("height", 18)
-    // .style("fill", function(d, i) {return colors.slice().reverse()[i];});
-
-    // legend.append("text")
-    // .attr("x", width + 5)
-    // .attr("y", 9)
-    // .attr("dy", ".35em")
-    // .style("text-anchor", "start")
-    // .text(function(d, i) { 
-    //   switch (i) {
-    //     case 0: return "Anjou pears";
-    //     case 1: return "Naval oranges";
-    //     case 2: return "McIntosh apples";
-    //     case 3: return "Red Delicious apples";
-    //   }
-    // });
-
     // Add a tooltip div. Here I define the general feature of the tooltip: stuff that do not depend on the data point.
     // Its opacity is set to 0: we don't see it by default.
     var tooltip = d3.select("#rating_salary_scatter")
