--- a/newFifa.html
+++ b/newFifa.html
@@ -70,17 +70,20 @@
       }
       .selectTextX{
         position: absolute;
-        top: 422px;
-        left: 180px;
+        top: 418px;
+        left: 165px;
+        font-size: 18px;
 
       }
       .selectTextY{
         position: absolute;
-        top: 80px;
+        top: 50px;
+        left: 12px;
+        font-size: 18px;
       }
       .legendText{
         position: absolute;
-        top: 215px;
+        top: 205px;
         left: 15px;
         font-size: 18px;
       }
@@ -103,7 +106,7 @@
     <!-- Create a div where the graph will take place -->
     <div id="rating_salary_scatter"> 
       <div class="selectTextX">Select X-axis Attribute:</div>
-      <div class="selectTextY">Select Y-axis Attribute:</div>
+      <div class="selectTextY">Select Y-axis <br/> Attribute:</div>
       <div class="generateTable">Generate Table?
           <input type="checkbox" id="checkBox" />
       </div>
@@ -130,10 +133,10 @@
         </table>
     </div>
 
-    <p class="bins">
+<!--     <p class="bins">
       <label># of bins</label>
       <input type="number" min="1" max="100" step="10" value="20" id="nBin">
-    </p>
+    </p> -->
 
   <script>
   // add titles to charts, title to web page, instructions, etc.
@@ -182,14 +185,14 @@
       .attr("transform",
             "translate(" + histMargin.left + "," + histMargin.top  +")");
   // Handmade legend
-  svgBrush.append("circle").attr("cx",-165).attr("cy",220).attr("r", 6).style("fill", "#a6cee3")
-  svgBrush.append("circle").attr("cx",-165).attr("cy",250).attr("r", 6).style("fill", "#1f78b4")
-  svgBrush.append("circle").attr("cx",-165).attr("cy",280).attr("r", 6).style("fill", "#b2df8a")
-  svgBrush.append("circle").attr("cx",-165).attr("cy",310).attr("r", 6).style("fill", "#fb9a99")
-  svgBrush.append("text").attr("x", -150).attr("y", 220).text("Forwards").style("font", "16px ariel").attr("alignment-baseline","middle")
-  svgBrush.append("text").attr("x", -150).attr("y", 250).text("Midfielders").style("font", "16px ariel").attr("alignment-baseline","middle")
-  svgBrush.append("text").attr("x", -150).attr("y", 280).text("Defensemen").style("font", "16px ariel").attr("alignment-baseline","middle")
-  svgBrush.append("text").attr("x", -150).attr("y", 310).text("Goalkeepers").style("font", "16px ariel").attr("alignment-baseline","middle")
+  svgBrush.append("circle").attr("cx",-165).attr("cy",210).attr("r", 6).style("fill", "#a6cee3")
+  svgBrush.append("circle").attr("cx",-165).attr("cy",240).attr("r", 6).style("fill", "#1f78b4")
+  svgBrush.append("circle").attr("cx",-165).attr("cy",270).attr("r", 6).style("fill", "#b2df8a")
+  svgBrush.append("circle").attr("cx",-165).attr("cy",300).attr("r", 6).style("fill", "#fb9a99")
+  svgBrush.append("text").attr("x", -150).attr("y", 210).text("Forwards").style("font", "16px ariel").attr("alignment-baseline","middle")
+  svgBrush.append("text").attr("x", -150).attr("y", 240).text("Midfielders").style("font", "16px ariel").attr("alignment-baseline","middle")
+  svgBrush.append("text").attr("x", -150).attr("y", 270).text("Defensemen").style("font", "16px ariel").attr("alignment-baseline","middle")
+  svgBrush.append("text").attr("x", -150).attr("y", 300).text("Goalkeepers").style("font", "16px ariel").attr("alignment-baseline","middle")
 
   // variables that have the specific formatting for salary data
   var formatSalary = d3.format("$,");       // $10,000,000
@@ -456,6 +459,7 @@
     d3.select("#selectXaxis").on("change", function(d) {
         // recover the option that has been chosen
         var selectedOption = d3.select(this).property("value")
+        // var nBin = d3.select(this).property("bins")
         // run the updateChart function with this selected option
         deleteOldBrush()
         updateXaxis(selectedOption)
@@ -465,13 +469,14 @@
         updateLink(data)
         deleteOldHistSalary()
         deleteOldHistOverall()
-        updateHistSalary(20, data)
-        updateHistOverall(20, data)
+        updateHistSalary(nBin, data)
+        updateHistOverall(nBin, data)
         // brush.extent( [ [0,0], [width,height] ] )
     });
     d3.select("#selectYaxis").on("change", function(d) {
         // recover the option that has been chosen
         var selectedOption = d3.select(this).property("value")
+        // var nBin = d3.select(this).property("bins")
         // run the updateChart function with this selected option
         deleteOldBrush()
         updateYaxis(selectedOption)
@@ -481,8 +486,8 @@
         updateLink(data)
         deleteOldHistSalary()
         deleteOldHistOverall()
-        updateHistSalary(20, data)
-        updateHistOverall(20, data)
+        updateHistSalary(nBin, data)
+        updateHistOverall(nBin, data)
     });
     // function to change X axis on brush scatterplot (based on dropdown selection) and populate chart with data
     function updateXaxis(axis) {
@@ -498,11 +503,11 @@
         // .style("fill", "#69b3a2");
       svgBrush.select(".brush").call(brush.move, [[0,0], [1,1]])
       // repopulate legend circles
-      svgBrush.append("circle").attr("cx",-165).attr("cy",220).attr("r", 6).style("fill", "#a6cee3")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",250).attr("r", 6).style("fill", "#1f78b4")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",280).attr("r", 6).style("fill", "#b2df8a")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",310).attr("r", 6).style("fill", "#fb9a99")
-      } 
+      svgBrush.append("circle").attr("cx",-165).attr("cy",210).attr("r", 6).style("fill", "#a6cee3")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",240).attr("r", 6).style("fill", "#1f78b4")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",270).attr("r", 6).style("fill", "#b2df8a")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",300).attr("r", 6).style("fill", "#fb9a99")
+    } 
     // function to change Y axis on brush scatterplot (based on dropdown selection) and populate chart with data
     function updateYaxis(axis) {
       brushCircle = svgBrush.append('g')
@@ -517,11 +522,11 @@
         // .style("fill", "#69b3a2")
       svgBrush.select(".brush").call(brush.move, [[0,0], [1,1]])
       // repopulate legend circles
-      svgBrush.append("circle").attr("cx",-165).attr("cy",220).attr("r", 6).style("fill", "#a6cee3")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",250).attr("r", 6).style("fill", "#1f78b4")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",280).attr("r", 6).style("fill", "#b2df8a")
-      svgBrush.append("circle").attr("cx",-165).attr("cy",310).attr("r", 6).style("fill", "#fb9a99")
-      }
+      svgBrush.append("circle").attr("cx",-165).attr("cy",210).attr("r", 6).style("fill", "#a6cee3")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",240).attr("r", 6).style("fill", "#1f78b4")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",270).attr("r", 6).style("fill", "#b2df8a")
+      svgBrush.append("circle").attr("cx",-165).attr("cy",300).attr("r", 6).style("fill", "#fb9a99")
+    }
     // function to remove datapoints from brush scatterplot
     function deleteOldBrush(){
       svgBrush.selectAll("circle").remove()
@@ -604,7 +609,7 @@
       // Manage the existing bars and eventually the new ones:
       u
           .enter()
-          .append("rect") // Add a new rect for each new element
+          .append("rect") // Add a new rect for each new elements
           .merge(u) // get the already existing elements as well
           .transition() // and apply changes to all of them
           .duration(1000)
@@ -613,7 +618,7 @@
             .attr("width", function(d) { return Math.abs(xHistSalary(d.x1) - xHistSalary(d.x0) -1 ); })
             .attr("height", function(d) { return histHeight - yHistSalary(d.length); })
             .style("fill", "#69b3a2")
-      // If less bars in the new histogram, delete the ones not in use anymore
+      // If less bar in the new histogram, I delete the ones not in use anymore
       u
           .exit()
           .remove()
@@ -658,10 +663,10 @@
     // Initialize Overall Histogram with 20 bins
     updateHistOverall(20, toVisualize)
     // Listen to the button -> update if user change it
-    d3.select("#nBin").on("input", function() {
-      updateHistSalary(+this.value, toVisualize)
-      updateHistOverall(+this.value, toVisualize);
-    });
+    // d3.select("#nBin").on("input", function() {
+    //   updateHistSalary(+this.value, toVisualize)
+    //   updateHistOverall(+this.value, toVisualize);
+    // });
   });
   // For some reason when axes selections are changed, the brushed data are no longer of the class "brushed"
   // The following are functions defined to build a table with various data values
